# Lightweight_GUI

./: .gitignore  README.md
lightweight_gui/: CMakeLists.txt  LICENSE  README.md  build_debug_apps.bat  setup_3d_deps.bat
lightweight_gui/docs/: Doxyfile.in
lightweight_gui/examples/: README.md  calculator.c  dependency_checker.c  model_viewer.c  program_launcher.c  simple_form.c  simple_paint.c  todo_list.c
lightweight_gui/include/: lightgui.h
lightweight_gui/platform/: linux.c  windows.c
lightweight_gui/src/: lightgui.c  lightgui_internal.h
